--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Puritan:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Puritan:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: "Questrial", sans-serif;
+}
 
 .puritan {
-	font-family: 'Puritan', sans-serif;
-	font-weight: bold;
+  font-family: "Puritan", sans-serif;
+  font-weight: bold;
 }
